--- a/css/index.css
+++ b/css/index.css
@@ -70,6 +70,37 @@ p {
     width: 800px;
     margin: 0 auto;
 }
+header {
+    display: flex;
+    justify-items: center;
+}
+nav{
+    width:100%;
+    display: flex;
+    justify-content: space-around;
+    padding:2%;
+}
+nav img{
+    width:20%;
+    padding:1%;
+}
+.links{
+    display:flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding:1%;
+    width:80%;
+}
+.links a {
+    text-decoration: none;
+    text-align:center;
+}
+.jumbo{
+    background-size:auto;
+    background-repeat: no-repeat;
+    height: 20vh;
+    background-image: url(../img/jumbo.jpg);
+}
 
 .top-content {
     display: flex;
@@ -77,6 +108,7 @@ p {
     justify-content: space-evenly;
     margin-bottom: 20px;
     border-bottom: 1px dashed black;
+    padding:3%;
 }
 
 .top-content .text-container {
