--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
+/* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
 */
@@ -12,8 +12,8 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
@@ -24,7 +24,7 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
@@ -49,6 +49,7 @@ table {
 
 * {
     box-sizing: border-box;
+    max-width: 100%;
 }
 
 html, body {
@@ -69,7 +70,11 @@ p {
 .container {
     width: 800px;
     margin: 0 auto;
+    display:flex;
+    flex-direction:column;
+    justify-content: space-evenly;
 }
+
 header {
     display: flex;
     justify-items: center;
@@ -114,7 +119,7 @@ nav img{
 .top-content .text-container {
     width: 48%;
     padding: 0 1%;
-    padding-bottom: 20px;  
+    padding-bottom: 20px;
 }
 
 .middle-content {
@@ -133,17 +138,45 @@ nav img{
     justify-content: space-evenly;
 }
 
-.middle-content .boxes .box {
+.middle-content .boxes div {
     width: 12.5%;
     height: 100px;
-    background: black;
     margin: 20px 2.5%;
     color: white;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-
+.box1{
+    background:teal;
+}
+.box2{
+    background:gold
+}
+.box3 {
+    background:cadetblue;
+}
+.box4{
+    background:coral;
+}
+.box5{
+    background:crimson;
+}
+.box6{
+    background:forestgreen;
+}
+.box7{
+    background:darkorchid;
+}
+.box8{
+    background:hotpink;
+}
+.box9{
+    background:indigo;
+}
+.box10{
+    background:dodgerblue;
+}
 .bottom-content {
     display: flex;
     margin: 0 2% 20px;
@@ -175,4 +208,55 @@ footer nav {
 footer nav a {
     color: white;
     text-decoration: none;
+}
+
+.jumbo-about{
+    background-size:auto;
+    background-repeat: no-repeat;
+    height: 20vh;
+    background-image: url(../img/jumbo-about.png);
+}
+.about-head{
+    border-bottom: 1px dashed black;
+    padding:3%;
+    display:flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+.gallery{
+    display:flex;
+    flex-flow: wrap;
+    justify-content: space-evenly;
+    align-content: center;
+}
+.gallery-container{
+    display:flex;
+    flex-flow:row wrap;
+    justify-content: space-evenly;
+}
+.gallery-item{
+    width:45%;
+    border-bottom: 1px dashed black;
+    display:flex;
+    flex-flow:column wrap;
+    padding:3%;
+}
+.gallery-item h2 {
+    margin:0;
+}
+.learn-more{
+    border: 2px black solid;
+    padding:2%;
+    width:40%;
+    border-radius:10%;
+    text-align: center;
+
+}
+.gallery-item *{
+    padding:2%
+}
+.subsection{
+    display:flex;
+    flex-direction:column;
+    padding:2%;
 }
